--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@
                 <h3 class="welcome-title">About</h3>
                 <div class="intro-list">
                     <p>• MS Computer Science student at USC (2023-2025)</p>
-                    <p>• Seeking roles in Tech Art, Graphics, or Game Tools</p>
+                    <p>• Seeking opportunities as a Technical Artist or Graphics Programmer with expertise in real-time rendering, simulation,
+                    and game engine development.</p>
                 </div>
             </section>
 
